# kiranaos

./: .gitignore  CHANGELOG.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  railway.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260628_2100_initial_operational_release.py  20260713_2300_release1_commercial_foundation.py  20260714_0100_release2_operations.py  20260724_0900_release3_order_to_cash.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: seed.py  session.py
backend/app/models/: domain.py
backend/app/schemas/: domain.py
backend/app/services/: adapters.py  audit.py  auth.py  finance.py  ingestion.py  operations.py  parser.py  security.py  voice.py
backend/app/services/llm/: __init__.py  openai_chat.py  sarvam_chat.py
backend/app/services/ocr/: __init__.py  google_vision.py  sarvam_vision.py
backend/app/services/stt/: __init__.py  openai_whisper.py  sarvam.py
backend/tests/: test_api.py  test_parser.py  test_sarvam_adapters.py
docs/: ADOPTION_GUIDE.md  AI_PROVIDERS.md  API_GUIDE.md  ARCHITECTURE.md  DEPLOYMENT.md  GH_COMMIT_MESSAGE_v2.2.0.md  Gemfile  JEKYLL_GITHUB_PAGES.md  OPERATIONS.md  OPERATIONS_RELEASE.md  ORDER_TO_CASH.md  PILOT_READINESS.md  RELEASE_NOTES_v2.2.0.md  RELEASE_NOTES_v2.3.0.md  RELEASE_NOTES_v2.4.0.md  RELEASE_NOTES_v2.5.0.md  RELEASE_PROCESS.md  SECURITY_MODEL.md  TESTING.md  _config.yml  index.md
frontend/: index.html  (+2 more)
(+21 files in other folders)
