[project]
name = "kiranaos-api"
version = "2.1.1"
description = "WhatsApp-native order management for kirana stores"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",           # async HTTP client for OCR image downloads
  "alembic>=1.13.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]
ocr = [
  "google-cloud-vision>=3.7.0",
]

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select  = ["E", "F", "I", "UP", "B"]
ignore  = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
